[gd_scene load_steps=41 format=3 uid="uid://d4eyjvua56er2"]

[ext_resource type="Script" path="res://photo/player.gd" id="1_rtu4u"]
[ext_resource type="Script" path="res://scenes/snap_back.gd" id="2_bl0o4"]
[ext_resource type="PackedScene" uid="uid://bl0pv14fetexx" path="res://models/characters/Barbarian.glb" id="3_51xw7"]
[ext_resource type="AudioStream" uid="uid://byx2sks0tnf50" path="res://audio/rpg/footstep00.ogg" id="4_ougoy"]
[ext_resource type="AudioStream" uid="uid://cx14g2paeih2f" path="res://audio/rpg/footstep01.ogg" id="5_qnufb"]
[ext_resource type="AudioStream" uid="uid://bp3s5v4x35itw" path="res://audio/rpg/footstep02.ogg" id="6_igmux"]
[ext_resource type="AudioStream" uid="uid://bhcjcaanedcc6" path="res://audio/rpg/footstep03.ogg" id="7_pmriv"]
[ext_resource type="AudioStream" uid="uid://cfnubolctiqoo" path="res://audio/rpg/footstep04.ogg" id="8_aq5yk"]
[ext_resource type="AudioStream" uid="uid://bxfci4e20s220" path="res://audio/rpg/footstep05.ogg" id="9_af5ki"]
[ext_resource type="AudioStream" uid="uid://dldxsd65u50iu" path="res://audio/rpg/footstep06.ogg" id="10_bqqpi"]
[ext_resource type="AudioStream" uid="uid://dkufx5qnyvvpu" path="res://audio/rpg/footstep07.ogg" id="11_s8wtl"]
[ext_resource type="AudioStream" uid="uid://cvj1twyra1s87" path="res://audio/rpg/footstep08.ogg" id="12_b2ud0"]
[ext_resource type="AudioStream" uid="uid://bqkhm6niqbysf" path="res://audio/rpg/footstep09.ogg" id="13_4nv2f"]
[ext_resource type="AudioStream" uid="uid://4lulq4ij23xp" path="res://audio/rpg/beltHandle1.ogg" id="14_wbtsq"]
[ext_resource type="AudioStream" uid="uid://c2pftpp30a4sc" path="res://audio/rpg/beltHandle2.ogg" id="15_fa7go"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_3acj8"]
radius = 0.4

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_15dxh"]
animation = &"Death_B"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lhakx"]
animation = &"Jump_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x4ujy"]
animation = &"Jump_Land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8rke2"]
animation = &"Jump_Start"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_yp20g"]
animation = &"Idle"

[sub_resource type="AnimationNodeBlend3" id="AnimationNodeBlend3_63q5v"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ybiw8"]
animation = &"Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0vjyq"]
animation = &"Walking_A"

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_qmv00"]
graph_offset = Vector2(-679.829, 82.7086)
nodes/idle_anim/node = SubResource("AnimationNodeAnimation_yp20g")
nodes/idle_anim/position = Vector2(-226.667, 80)
nodes/move_blend/node = SubResource("AnimationNodeBlend3_63q5v")
nodes/move_blend/position = Vector2(26.6667, 146.667)
nodes/run_anum/node = SubResource("AnimationNodeAnimation_ybiw8")
nodes/run_anum/position = Vector2(-206.332, 339.386)
nodes/walk_anim/node = SubResource("AnimationNodeAnimation_0vjyq")
nodes/walk_anim/position = Vector2(-240, 200)
node_connections = [&"move_blend", 0, &"idle_anim", &"move_blend", 1, &"walk_anim", &"move_blend", 2, &"run_anum", &"output", 0, &"move_blend"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pu52j"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dwxxc"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wsjxx"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jfqgr"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_dc4w2"]
xfade_time = 0.5
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_otf1s"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_72mdw"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_s08nk"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ua4hq"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_hiyyu"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_8c6pg"]
states/Death_B/node = SubResource("AnimationNodeAnimation_15dxh")
states/Death_B/position = Vector2(740.006, 122.415)
states/Jump_Idle/node = SubResource("AnimationNodeAnimation_lhakx")
states/Jump_Idle/position = Vector2(629.334, 280)
states/Jump_Land/node = SubResource("AnimationNodeAnimation_x4ujy")
states/Jump_Land/position = Vector2(342, 327.333)
states/Jump_Start/node = SubResource("AnimationNodeAnimation_8rke2")
states/Jump_Start/position = Vector2(466, 166)
states/Start/position = Vector2(102.667, 108.667)
states/move/node = SubResource("AnimationNodeBlendTree_qmv00")
states/move/position = Vector2(385.334, 45.3333)
transitions = ["Start", "move", SubResource("AnimationNodeStateMachineTransition_pu52j"), "Jump_Start", "Jump_Idle", SubResource("AnimationNodeStateMachineTransition_dwxxc"), "Jump_Idle", "Jump_Land", SubResource("AnimationNodeStateMachineTransition_wsjxx"), "move", "Jump_Start", SubResource("AnimationNodeStateMachineTransition_jfqgr"), "Jump_Land", "move", SubResource("AnimationNodeStateMachineTransition_dc4w2"), "move", "Death_B", SubResource("AnimationNodeStateMachineTransition_otf1s"), "Jump_Start", "Death_B", SubResource("AnimationNodeStateMachineTransition_72mdw"), "Jump_Idle", "Death_B", SubResource("AnimationNodeStateMachineTransition_s08nk"), "Jump_Land", "Death_B", SubResource("AnimationNodeStateMachineTransition_ua4hq"), "Death_B", "move", SubResource("AnimationNodeStateMachineTransition_hiyyu")]
graph_offset = Vector2(5.35009, -9.58483)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_pkwh4"]
random_pitch = 1.1
random_volume_offset_db = 0.5
streams_count = 10
stream_0/stream = ExtResource("4_ougoy")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_qnufb")
stream_1/weight = 1.0
stream_2/stream = ExtResource("6_igmux")
stream_2/weight = 1.0
stream_3/stream = ExtResource("7_pmriv")
stream_3/weight = 1.0
stream_4/stream = ExtResource("8_aq5yk")
stream_4/weight = 1.0
stream_5/stream = ExtResource("9_af5ki")
stream_5/weight = 1.0
stream_6/stream = ExtResource("10_bqqpi")
stream_6/weight = 1.0
stream_7/stream = ExtResource("11_s8wtl")
stream_7/weight = 1.0
stream_8/stream = ExtResource("12_b2ud0")
stream_8/weight = 1.0
stream_9/stream = ExtResource("13_4nv2f")
stream_9/weight = 1.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_47jey"]
velocity_pivot = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
direction = Vector3(2.08165e-12, 0.5, 1)
spread = 20.0
initial_velocity_min = 3.0
initial_velocity_max = 4.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
damping_min = 2.0
damping_max = 4.0
scale_min = 0.1
scale_max = 0.3

[sub_resource type="SphereMesh" id="SphereMesh_2ioqy"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_qgsxo"]
random_pitch = 1.1
random_volume_offset_db = 0.5
streams_count = 2
stream_0/stream = ExtResource("14_wbtsq")
stream_0/weight = 1.0
stream_1/stream = ExtResource("15_fa7go")
stream_1/weight = 1.0

[node name="Player" type="CharacterBody3D" groups=["Persist", "player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
script = ExtResource("1_rtu4u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_3acj8")

[node name="CameraRemoteTransform3D" type="RemoteTransform3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
remote_path = NodePath("../../CameraPivot")
update_rotation = false
update_scale = false
script = ExtResource("2_bl0o4")

[node name="ModelWrapper" type="Node3D" parent="."]

[node name="Model" parent="ModelWrapper" instance=ExtResource("3_51xw7")]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 0, 0, 0)

[node name="Skeleton3D" parent="ModelWrapper/Model/Rig" index="0"]
bones/1/position = Vector3(0, 0.392064, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/4/rotation = Quaternion(-0.559906, -0.0608804, -0.643974, 0.517779)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(3.65498e-08, -4.88301e-08, -0.494719, 0.869053)
bones/6/rotation = Quaternion(-9.73784e-11, -2.98437e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.321065, -0.325319, 0.145726, 0.87741)
bones/8/rotation = Quaternion(-3.6586e-09, 6.87811e-09, -0.707107, 0.707107)
bones/11/rotation = Quaternion(-0.618244, 0.0807286, 0.618012, 0.478873)
bones/11/scale = Vector3(0.999999, 0.999999, 1)
bones/12/rotation = Quaternion(2.09853e-08, 5.12855e-08, 0.517939, 0.855417)
bones/13/rotation = Quaternion(-9.73784e-11, 2.98437e-10, -0.0266581, 0.999645)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(-0.319291, 0.300524, -0.22735, 0.869512)
bones/15/rotation = Quaternion(-1.02444e-09, -4.24391e-09, 0.707107, 0.707107)
bones/16/rotation = Quaternion(1.40073e-07, 1, -1.03316e-07, -9.11951e-09)
bones/17/rotation = Quaternion(1.40073e-07, 1, -1.03316e-07, -9.11951e-09)
bones/18/rotation = Quaternion(1.40073e-07, 1, -1.03316e-07, -9.11951e-09)
bones/19/rotation = Quaternion(-5.80608e-11, -0.0313417, -1.88012e-09, 0.999509)
bones/21/rotation = Quaternion(4.44848e-36, -7.10543e-15, -6.26068e-22, 1)
bones/22/rotation = Quaternion(0.993715, 0.0837146, 0.0735038, 0.0109185)
bones/22/scale = Vector3(1, 1, 1)
bones/23/rotation = Quaternion(0.195602, 6.26228e-08, -1.32239e-07, 0.980683)
bones/24/rotation = Quaternion(-0.517564, -0.209497, 0.0436549, 0.828452)
bones/25/rotation = Quaternion(-3.04791e-08, 0.920355, -0.391084, 6.94849e-08)
bones/25/scale = Vector3(1, 1, 1)
bones/26/rotation = Quaternion(0.997322, -0.0294574, 0.0315293, 0.0590483)
bones/26/scale = Vector3(1, 1, 1)
bones/27/rotation = Quaternion(0.274008, -6.38135e-08, 1.92761e-07, 0.961727)
bones/28/rotation = Quaternion(-0.559039, 0.114513, -0.00862763, 0.82115)
bones/29/rotation = Quaternion(3.04791e-08, 0.920355, -0.391084, -6.94849e-08)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/31/position = Vector3(0.202182, 0.0259903, 0.205181)
bones/31/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/32/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/33/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.9526e-08)
bones/33/scale = Vector3(1, 1, 1)
bones/34/rotation = Quaternion(-0.391084, -6.885e-08, -6.56288e-08, 0.920355)
bones/34/scale = Vector3(1, 1, 1)
bones/35/rotation = Quaternion(1, -3.10863e-15, 1.94707e-07, -6.91739e-22)
bones/37/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/38/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/39/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/40/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.95261e-08)
bones/40/scale = Vector3(1, 1, 1)
bones/41/rotation = Quaternion(-0.391084, -6.885e-08, -6.56288e-08, 0.920355)
bones/41/scale = Vector3(1, 1, 1)
bones/45/position = Vector3(0.520841, 0.788312, -0.0576373)
bones/45/rotation = Quaternion(0.794627, -1.32247e-07, 0.607098, -5.02923e-08)
bones/47/position = Vector3(-0.510844, 0.788312, 0.0597369)
bones/47/rotation = Quaternion(-0.758253, -1.89432e-07, 0.651961, -1.86264e-08)

[node name="1H_Axe_Offhand" parent="ModelWrapper/Model/Rig/Skeleton3D" index="0"]
transform = Transform3D(8.13557e-07, 0.262863, 0.964833, 0.999999, 2.9555e-08, 4.99466e-08, 4.54492e-07, 0.964832, -0.262863, 0.516524, 0.636705, 0.0136165)

[node name="Barbarian_Round_Shield" parent="ModelWrapper/Model/Rig/Skeleton3D" index="1"]
transform = Transform3D(6.02066e-07, 0.262863, 0.964833, 0.999999, -2.49089e-06, 9.55827e-07, 3.12443e-06, 0.964833, -0.262863, 0.662643, 0.636706, -0.0430841)

[node name="1H_Axe" parent="ModelWrapper/Model/Rig/Skeleton3D" index="2"]
transform = Transform3D(-8.70419e-07, -0.149894, 0.988701, 0.999999, -6.37074e-08, -6.81089e-08, 5.81577e-07, 0.988701, 0.149894, -0.496053, 0.64103, 0.139528)

[node name="2H_Axe" parent="ModelWrapper/Model/Rig/Skeleton3D" index="3"]
transform = Transform3D(-8.70419e-07, -0.149894, 0.988701, 0.999999, -6.37074e-08, -6.81089e-08, 5.81577e-07, 0.988701, 0.149894, -0.496053, 0.64103, 0.139528)

[node name="Mug" parent="ModelWrapper/Model/Rig/Skeleton3D" index="4"]
transform = Transform3D(-8.70419e-07, -0.149894, 0.988701, 0.999999, -6.37074e-08, -6.81089e-08, 5.81577e-07, 0.988701, 0.149894, -0.488716, 0.340464, 0.0911352)

[node name="Barbarian_Hat" parent="ModelWrapper/Model/Rig/Skeleton3D" index="5"]
transform = Transform3D(1, -2.20965e-22, -1.42109e-14, 2.20965e-22, 1, 0, 1.42109e-14, -3.1401e-36, 1, -4.30385e-09, 1.1827, -1.39099e-07)

[node name="Barbarian_Cape" parent="ModelWrapper/Model/Rig/Skeleton3D" index="6"]
transform = Transform3D(0.996275, -5.14962e-09, 0.0862353, 5.13043e-09, 1, 4.44077e-10, -0.0862353, 1.8939e-15, 0.996275, -1.91641e-06, 1.20227, 2.59003e-08)

[node name="head" type="BoneAttachment3D" parent="ModelWrapper/Model/Rig/Skeleton3D" index="13"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.30385e-09, 1.20825, 1.58285e-15)
bone_name = "head"
bone_idx = 19
override_pose = true

[node name="AnimationTree" type="AnimationTree" parent="ModelWrapper"]
root_node = NodePath("../Model")
tree_root = SubResource("AnimationNodeStateMachine_8c6pg")
anim_player = NodePath("../Model/AnimationPlayer")
parameters/move/move_blend/blend_amount = -1.0

[node name="AudioListener3D" type="AudioListener3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
current = true

[node name="FootstepAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_pkwh4")
volume_db = -22.0
unit_size = 3.0
max_db = 4.996e-16
bus = &"Sound"

[node name="FootstepParticles3D" type="GPUParticles3D" parent="."]
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_47jey")
draw_pass_1 = SubResource("SphereMesh_2ioqy")

[node name="BeltAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_qgsxo")
volume_db = -12.0
unit_size = 6.0
max_db = 4.996e-16
bus = &"Sound"

[editable path="ModelWrapper/Model"]
